syntax = "proto3";
option go_package = "github.com/wilmacedo/streaming/go/api";

import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string name = 2;
  uint64 age = 3;
}

message Music {
  string id = 1;
  string name = 2;
  string author = 3;
  string playlistId = 4;
}

message Playlist {
  string id = 1;
  string name = 2;
  string userId = 3;
}

message FindRequest {
  string id = 1;
}

message ListUserResponse {
  repeated User users = 1;
}

message ListMusicResponse {
  repeated Music musics = 1;
}

message ListPlaylistResponse {
  repeated Playlist playlists = 1;
}

service API {
  rpc FindUser(FindRequest) returns (User);
  rpc StreamUsers(google.protobuf.Empty) returns (stream User);
  rpc ListUsers(google.protobuf.Empty) returns (ListUserResponse);

  rpc FindMusic(FindRequest) returns (Music);
  rpc StreamMusics(google.protobuf.Empty) returns (stream Music);
  rpc ListMusics(google.protobuf.Empty) returns (ListMusicResponse);

  rpc FindPlaylist(FindRequest) returns (Playlist);
  rpc StreamPlaylists(google.protobuf.Empty) returns (stream Playlist);
  rpc ListPlaylists(google.protobuf.Empty) returns (ListPlaylistResponse);
}
